--- a/css/styles.css
+++ b/css/styles.css
@@ -143,3 +143,14 @@ footer a:hover {
 	border-radius: 50%;
 }
 
+#background-video {
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: -1;
+  }
