--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,6 @@ footer a:hover {
 
 .image-div-values {
 	background-color: #fffcf8;
-
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -151,7 +150,19 @@ footer a:hover {
     width: 350px;
 }
 
+.values-background {
+	background-color: #c66e4e;
+	padding-top: 20px	;
+	padding-inline: 5px;
+	margin: 5px;
+    width: 350px;
+}
+
 .team-background img {
+	border-radius: 50%;
+}
+
+.values-background img {
 	border-radius: 50%;
 }
 
