--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 /* Changing the background colour for the header */
 
 header {
-	background-color: #D18965;
+	background-color: #c66e4e;
 }
 
 /* Changing the background color for the navigation bar */
