--- a/css/styles.css
+++ b/css/styles.css
@@ -182,3 +182,16 @@ footer a:hover {
   .image-div-comingsoon.html {
 background-image: url("../images/yoga/woman\ yoga\ home\ page.jpg");
   }
+
+  @media (max-width: 1000px) {
+	.floating-text {
+		padding:20px;
+		display: grid;
+	}
+	.socials {
+		all: unset;
+		margin: auto;
+		display: flex;
+		gap: 10px;
+	}
+  }
