--- a/css/styles.css
+++ b/css/styles.css
@@ -44,14 +44,14 @@ footer a:hover {
  
 
 .image-div {
-	background-image: url("../images/yoga/woman\ yoga\ home\ pages\ crop.jpg");
+	background-image: url("../images/yoga/woman-yoga-hp-crop.jpg");
 	background-size: cover;
 	background-position: center;
 	height: 100%;
 }
 
 .image-div-about {
-	background-image: url("../images/yoga/woman\ meditatingcropdreamy.2.jpg");
+	background-image: url("../images/yoga/woman-meditatingcropdreamy.jpg");
 	background-size: cover;
 	background-position: center;
 	/* height: 100%; */
@@ -61,7 +61,7 @@ footer a:hover {
 }
 
 .image-div-comingsoon {
-	background-image: url("../images/yoga/woman\ yoga\ home\ page\ crop2.jpg");
+	background-image: url("../images/yoga/woman-yoga-hp-crop.jpg");
 	background-size: cover;
 	background-position: center;
 	/* height: 100%; */
@@ -182,7 +182,7 @@ footer a:hover {
   }
 
   .image-div-comingsoon.html {
-  background-image: url("../images/yoga/woman\ yoga\ home\ page.jpg");
+  background-image: url("../images/yoga/woman-yoga-hp.jpg");
   }
 
   @media (max-width: 1000px) {
